fix(theme): Tweak spacing.

--- a/invenio_modular_deposit_form/assets/semantic-ui/less/invenio_modular_deposit_form/deposit_form.less
+++ b/invenio_modular_deposit_form/assets/semantic-ui/less/invenio_modular_deposit_form/deposit_form.less
@@ -187,7 +187,7 @@
       }
     }
 
-    & > .invenio-field-wrapper:last-child,
+    // & > .invenio-field-wrapper:last-child,
     & > .invenio-group-field:last-child {
       .field {
         margin-bottom: 0.5em !important;
@@ -196,7 +196,8 @@
 
     .invenio-field-wrapper {
       .field {
-        .helptext {
+        .helptext,
+        .description {
           // copies stock InvenioRDM styles for label.helptext
           margin-top: -0.8em;
           margin-bottom: 2em;
